--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(url: '../questions') do |f| %>
-  <%= f.label(:body, 'New question:') %>:<br>
-  <%= f.text_area(:body) %><br>
+<%= form_with(url: test_questions_path(@test)) do |f| %>
+  <%= f.label(:'question[body]', 'New question:') %>:<br>
+  <%= f.text_area(:'question[body]') %><br>
 
   <%= f.submit("Send") %>
 <% end %>
