Finish part8 tasks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,10 @@
 
   <body>
     <%= yield %>
+    <footer>
+      <%= current_year %>, Vladimir<br>
+      <a href="<%= github_url('vtpros', 'TestGuru') %>">Учебный проект</a>  в онлайн-школе 
+      <a href='http://thinknetica.com/'>Thinknetica</a>
+    </footer>
   </body>
 </html>
