--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,1 +1,10 @@
-<%= @question.body %>
+<h2>Question:</h2>
+<p>
+  <%= @question.body %>
+  (<%= link_to 'edit', edit_question_path(@question) %>,
+  <%= link_to 'delete',
+              question_path(@question),
+              method: :delete,
+              data: { confirm: 'Are you sure?' }
+   %>)
+</p>
