--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <%= yield %>
     <footer>
       <%= current_year %>, Vladimir<br>
-      <a href="<%= github_url('vtpros', 'TestGuru') %>">Учебный проект</a>  в онлайн-школе 
-      <a href='http://thinknetica.com/'>Thinknetica</a>
+      <%= github_url(text: 'Study project', author: 'vtpros', repo: 'TestGuru') %> in
+      <%= link_to 'Thinknetica', 'http://thinknetica.com/' %> online school.
     </footer>
   </body>
 </html>
