--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,7 +1,6 @@
-<%= question_header(@question.test, :edit) %>
-<%= form_with(model: @question, local: true) do |f| %>
-  <%= f.label(:'body', 'Question text:') %>:<br>
-  <%= f.text_area(:'body') %><br>
-
-  <%= f.submit("Send") %>
+<% if @question.errors.present? %>
+  <%= render 'shared/errors/errors_list', errors: @question.errors %>
 <% end %>
+<% @test = @question.test %>
+
+<%= render 'shared/question_form', model: @question %>
