Fix rest of code review remarks

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,5 +1,5 @@
 <% if @question.errors.present? %>
-  <%= render 'shared/errors/errors_list', errors: @question.errors %>
+  <%= render 'shared/errors/errors_list', resource: @question %>
 <% end %>
 <% @test = @question.test %>
 
