--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,8 @@
   </head>
 
   <body>
+    <%= render 'shared/nav' %>
     <%= yield %>
-    <footer>
-      <%= current_year %>, Vladimir<br>
-      <%= github_url(text: 'Study project', author: 'vtpros', repo: 'TestGuru') %> in
-      <%= link_to 'Thinknetica', 'http://thinknetica.com/' %> online school.
-    </footer>
+    <%= render 'shared/footer' %>
   </body>
 </html>
