--- a/app/views/shared/errors/_errors_list.html.erb
+++ b/app/views/shared/errors/_errors_list.html.erb
@@ -1,7 +1,6 @@
 <ul class='error'>
   <%= tag.strong 'Errors detected' %>
-  <% errors.each do |field, message| %>
-    <li><%= "#{field} #{message}" %></li>
+  <% resource.errors.full_messages.each do |message| %>
+    <li><%= "#{message}" %></li>
   <% end %>
 </ul>
-<% console %>
