--- a/app/views/shared/_question_form.html.erb
+++ b/app/views/shared/_question_form.html.erb
@@ -1,7 +1,7 @@
 <%= question_header(@test) %>
 <%= form_with(model: model, local: true) do |f| %>
-  <%= f.label(:'body', 'Question text:') %><br>
-  <%= f.text_area(:'body') %><br>
+  <%= f.label(:body, 'Question text:') %><br>
+  <%= f.text_field(:'body') %><br>
 
-  <%= f.submit("Send") %>
+  <%= f.submit %>
 <% end %>
