Fix final code review remarks

--- a/app/views/shared/errors/_errors_list.html.erb
+++ b/app/views/shared/errors/_errors_list.html.erb
@@ -1,6 +1,8 @@
-<ul class='error'>
-  <%= tag.strong 'Errors detected' %>
-  <% resource.errors.full_messages.each do |message| %>
-    <li><%= "#{message}" %></li>
-  <% end %>
-</ul>
+<% if resource.errors.present? %>
+  <ul class='error'>
+    <%= tag.strong 'Errors detected' %>
+    <% resource.errors.full_messages.each do |message| %>
+      <li><%= "#{message}" %></li>
+    <% end %>
+  </ul>
+<% end %>
