--- a/app/views/shared/_test_form.html.erb
+++ b/app/views/shared/_test_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_with(model: model, local: true) do |f| %>
+<%= render 'shared/errors/errors_list', resource: @test %>
+
+<%= form_with(model: @test, local: true) do |f| %>
   <%= f.label(:title, 'Title') %><br>
   <%= f.text_field(:title) %><br>
   <%= f.label(:level, 'Level') %><br>
