--- a/app/views/tests/edit.html.erb
+++ b/app/views/tests/edit.html.erb
@@ -1,5 +1,1 @@
-<% if @test.errors.present? %>
-  <%= render 'shared/errors/errors_list', resource: @test %>
-<% end %>
-
-<%= render 'shared/test_form.html.erb', model: @test %>
+<%= render 'shared/test_form.html.erb' %>
