--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -1,6 +1,1 @@
-<% if @test&.errors.present? %>
-  <%= render 'shared/errors/errors_list', resource: @test %>
-<% end %>
-<% @test = Test.new %>
-
-<%= render 'shared/test_form.html.erb', model: @test %>
+<%= render 'shared/test_form.html.erb' %>
