--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,6 +7,15 @@
               question_path(@question),
               method: :delete,
               data: { confirm: 'Are you sure?' }
-  %>
+  %>,
+  <%= link_to 'back', test_path(@question.test) %>
   )
 </p>
+
+<h2>Answers</h2>
+
+<%= link_to 'New answer', new_question_answer_path(@question) %>
+
+<ol>
+  <%= render @question.answers %>
+</ol>
