Files for the second screencast

--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,4 +1,5 @@
 <li>
   <%= link_to "#{test.title}", test_path(test) %>,
+  level: <%= test.level %>,
   <%= pluralize(test.questions.count, 'question', locale: :en) %>
 </li>
