--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -7,8 +7,8 @@
                 test_path(@test),
                 method: :delete,
                 data: {confirm: 'Are you sure?'}
-    %>
-    )
+    %>)
+    <%= button_to 'start', start_test_path(@test) %>
 <p/>
 <h2>
   <%= pluralize(@questions.count, 'question', locale: :en) %>
