--- a/app/views/user_tests/show.html.erb
+++ b/app/views/user_tests/show.html.erb
@@ -1,1 +1,16 @@
-<h1>Pass the test</h1>
+<h1>Passing the "<%= @user_test.test.title %>" Test</h1><br>
+
+<h2><%= @user_test.current_question.body %></h2><br>
+
+<%= form_with url: user_test_path(@user_test), local: true, method: :put do |f| %>
+  <%= f.collection_check_boxes :answer_ids, @user_test.current_question.answers,
+                              :id, :body, include_hidden: false do |b| %>
+    <p>
+      <%= b.check_box id: "answer_ids_#{b.object.id}" %>
+      <%= b.label %>
+    </p>
+  <% end %>
+
+  <p><%= f.submit 'Next' %></p>
+
+<% end %>
