--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,1 +1,3 @@
-<%= link_to 'Home', root_path %> <%= link_to 'Tests', tests_path %><br>
+<%= link_to 'Home', root_path %>
+<%= link_to 'Tests', tests_path %>
+<%= link_to 'UserTests', user_tests_path %><br>
