--- a/app/views/user_tests/result.html.erb
+++ b/app/views/user_tests/result.html.erb
@@ -1,5 +1,10 @@
 <h1>The "<%= @user_test.test.title %>" Test was completed</h1>
 <p>
   Questions answered correctly: <%= @user_test.correct_questions %> out of
-  <%= @user_test.test.questions.count %>
+  <%= @user_test.test.questions.count %>, <%= @user_test.result %> %<br>
+  <% if @user_test.result <= 85 %>
+    <p class='failure'>Test failed.</p>
+  <% else %>
+    <p class='success'>You have passed the test.</p>
+  <% end %>
 </p>
