--- a/app/views/questions/_question_form.html.erb
+++ b/app/views/questions/_question_form.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/errors/errors_list', resource: @question %>
 
-<%= question_header(@question) %>
+<%= question_header(@test, @question) %>
 <%= form_with(model: model, local: true) do |f| %>
   <%= f.label(:body, 'Question text:') %><br>
   <%= f.text_field(:'body') %><br>
