--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= render 'shared/nav' %>
 
     <% if logged_in? %>
-      <div class="nav user">Welcome, <%= @current_user.email %> Guru</div>
+      <div class="nav user">Welcome, <%= current_user.name %> Guru</div>
     <% end %>
 
     <%= yield %>
