--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,5 +2,5 @@
 <%= link_to 'Tests', tests_path %>
 <%= link_to 'TestPassages', test_passages_path %>
 <% if logged_in? %>
-  <%= link_to 'Logout', logout_path %><br>
+  <%= link_to 'Logout', logout_path, method: :delete %><br>
 <% end %>
