--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,10 @@
 <%= form_with model: @user, local: true do |f| %>
-  <%= render 'shared/errors/errors_list', resource: @user %>
-  <%= flash_msg %>
+  <%= flash_msg(:alert) %>
+
+  <p>
+    <%= f.label :name %><br>
+    <%= f.text_field :name, id: :user_name %>
+  </p>
 
   <p>
     <%= f.label :email %><br>
