--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,7 +8,7 @@
               method: :delete,
               data: { confirm: 'Are you sure?' }
   %>,
-  <%= link_to 'back', test_path(@question.test) %>
+  <%= link_to 'back', admin_test_path(@question.test) %>
   )
 </p>
 
