--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,9 +2,15 @@
   <%= flash_msg(:alert) %>
 
   <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name, id: :user_name %>
+    <%= f.label :first_name %><br>
+    <%= f.text_field :first_name, id: :user_name %>
   </p>
+
+  <p>
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name, id: :user_name %>
+  </p>
+
 
   <p>
     <%= f.label :email %><br>
