--- a/app/views/admin/answers/show.html.erb
+++ b/app/views/admin/answers/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Question</h1>
+<h1>Answer</h1>
 
 <p>
   <%= @answer.question.body %>
@@ -14,4 +14,4 @@
   <%= @answer.correct %>
 </p>
 
-<%= link_to 'Back', question_path(@answer.question) %>
+<%= link_to 'Back', admin_question_path(@answer.question) %>
