--- a/app/views/admin/tests/_test_form.html.erb
+++ b/app/views/admin/tests/_test_form.html.erb
@@ -2,15 +2,15 @@
   <%= render 'shared/errors/errors_list', resource: @test %>
 
   <p>
-    <%= f.label :title, 'Title' %><br>
+    <%= f.label :title %><br>
     <%= f.text_field :title, id: :test_title %><br>
   </p>
   <p>
-    <%= f.label :level, 'Level' %><br>
+    <%= f.label :level %><br>
     <%= f.number_field :level, id: :test_level %><br>
   </p>
   <p>
-    <%= f.label :category_id, 'Category' %><br>
+    <%= f.label :category_id %><br>
     <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true %><br>
   </p>
 
