--- a/app/views/admin/tests/new.html.erb
+++ b/app/views/admin/tests/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New test</h1>
+<h1><%= t('.header') %></h1>
 <%= render 'test_form.html.erb' %>
-<%= link_to 'Back', admin_tests_path %>
+<%= link_to t('app.back'), admin_tests_path %>
