--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -3,10 +3,10 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Level</th>
-      <th>Questions</th>
-      <th>Actions:</th>
+      <th><%= t('app.title') %></th>
+      <th><%= t('app.level') %></th>
+      <th><%= t('app.questions') %></th>
+      <th><%= t('app.actions') %>:</th>
     </tr>
   </thead>
   <tbody>
