--- a/app/views/admin/questions/_question_form.html.erb
+++ b/app/views/admin/questions/_question_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= question_header(@test, @question) %>
 <%= form_with(model: model, local: true) do |f| %>
-  <%= f.label(:body, 'Question text:') %><br>
+  <%= f.label(:body, t('.text')) %><br>
   <%= f.text_field(:'body') %><br>
 
   <%= f.submit %>
