--- a/app/views/admin/tests/edit.html.erb
+++ b/app/views/admin/tests/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit <%= @test.title %> test</h1>
+<h1> <%= t('.header') %> <%= @test.title %> </h1>
 <%= render 'test_form' %>
-<%= link_to 'Back', admin_tests_path %>
+<%= link_to t('app.back'), admin_tests_path %>
