--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,16 +1,16 @@
 <h1><%= t('.header') %>:</h1>
 
 <p>
-  <%= link_to 'New test', new_admin_test_path %>
+  <%= link_to t('.new_test'), new_admin_test_path %>
 </p>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Level</th>
-      <th>Questions</th>
-      <th colspan='3'>Actions:</th>
+      <th><%= t('app.title') %></th>
+      <th><%= t('app.level') %></th>
+      <th><%= t('app.questions') %></th>
+      <th colspan='3'><%= t('app.actions') %>:</th>
     </tr>
   </thead>
   <tbody>
