--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,26 +1,27 @@
-<h1>Test:</h1>
+<h1><%= t('.header') %>:</h1>
 <%= flash_msg(:alert) %>
 <p>
-  <strong><%= @test.title %></strong>,
-  level: <%= @test.level %>
+  <strong><%= @test.title %></strong><br>
+  <%= t('app.level') %>: <%= @test.level %>
 </p>
-<p>Actions:
-    <%= link_to 'edit', edit_admin_test_path(@test) %>,
-    <%= link_to 'delete',
+<p><%= t('app.actions') %>:
+    <%= link_to t('app.edit'), edit_admin_test_path(@test) %>,
+    <%= link_to t('app.delete'),
                 admin_test_path(@test),
                 method: :delete,
-                data: {confirm: 'Are you sure?'}
+                data: {confirm: t('app.sure?')}
     %>
 
-    <%= button_to 'start', start_test_path(@test) %>
+    <%= button_to t('.start'), start_test_path(@test) %>
 </p>
 <h2>
-  <%= pluralize(@test.questions.count, 'question', locale: :en) %>
+  <%= @test.questions.count %>
+  <%= t('.questions', count: @test.questions.count) %>
 </h2>
 <ul>
   <%= render @test.questions  %>
 </ul>
 <p>
-  <%= link_to 'Add a question', new_admin_test_question_path(@test) %>
+  <%= link_to t('.add'), new_admin_test_question_path(@test) %>
 </p>
-<p><%= link_to 'Back', admin_tests_path %></p>
+<p><%= link_to t('app.back'), admin_tests_path %></p>
