--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,7 @@
 
     <%= render 'shared/flash' %>
 
-    <% if user_signed_in? %>
-      <div class="nav user">
-        Welcome, <%= current_user.first_name %> Guru | 
-        <%= link_to 'Logout', :destroy_user_session, method: :delete %>
-      </div>
-    <% end %>
+    <%= render 'shared/welcome' %>
 
     <%= yield %>
 
