--- a/app/views/test_passages/_test_passage.html.erb
+++ b/app/views/test_passages/_test_passage.html.erb
@@ -1,8 +1,8 @@
 <li>
  "<%= test_passage.test.title %>",
   <% if test_passage.completed? %>
-    test completed, <%= test_passage.result %> %.
+    <%= t(".completed") %>, <%= test_passage.result %> %.
   <% else %>
-    <%= link_to 'continue test', test_passage_path(test_passage) %>
+    <%= link_to t('.continue'), test_passage_path(test_passage) %>
   <% end %>
 </li>
