--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,10 +1,10 @@
-<h1>The "<%= @test_passage.test.title %>" Test was completed</h1>
+<h1>"<%= @test_passage.test.title %>" <%= t('.header') %></h1>
 <p>
-  Questions answered correctly: <%= @test_passage.correct_questions %> out of
+  <%= t('.correct') %>: <%= @test_passage.correct_questions %> <%= t('.outof') %>
   <%= @test_passage.test.questions.count %>, <%= @test_passage.result %> %<br>
   <% if @test_passage.success? %>
-    <p class='success'>You have passed the test.</p>
+    <p class='success'><%= t('.success') %>.</p>
   <% else %>
-    <p class='failure'>Test failed.</p>
+    <p class='failure'><%= t('.failure') %>.</p>
   <% end %>
 </p>
