--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -2,5 +2,5 @@
   <td><%= test.title %></td>
   <td><%= test.level %></td>
   <td><%= test.questions.count %></td>
-  <td><%= button_to 'start', start_test_path(test) %></td>
+  <td><%= button_to t('app.start'), start_test_path(test) %></td>
 </tr>
