Fix code review remarks

--- a/app/views/shared/_welcome.html.erb
+++ b/app/views/shared/_welcome.html.erb
@@ -1,7 +1,6 @@
 <% if user_signed_in? %>
   <div class="nav user">
-    <%= t('app.welcome') %>, <%= current_user.first_name %>
-    <%= t('app.guru') %> |&nbsp;
-    <%= link_to t('app.logout'), :destroy_user_session, method: :delete %>
+    <%= t('app.welcome', name: current_user.first_name) %> 
+    (<%= link_to t('app.logout'), :destroy_user_session, method: :delete %>)
   </div>
 <% end %>
