--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -11,9 +11,9 @@
   )
 </p>
 
-<h2><%= t('app.questions') %></h2>
+<h2><%= t('app.answers') %></h2>
 
-<%= link_to t('.new'), new_admin_question_answer_path(@question) %>
+<%= link_to t('.new_answer'), new_admin_question_answer_path(@question) %>
 
 <ol>
   <%= render @question.answers %>
