Files for the video

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,3 +1,7 @@
-<%= link_to t('app.home'), root_path %>
-<%= link_to t('app.tests'), tests_path %>
-<%= link_to t('app.test_passages'), test_passages_path %>
+<nav class="navbar navbar-light bg-ligth">
+  <%= link_to t('app.testguru'), root_path, class: 'navbar-brand' %>
+
+  <span class="navbar-text">
+    <%= render 'shared/welcome' %>
+  </span>
+</nav>
