--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,8 +1,9 @@
-<div class='nav nav-admin'>
+<nav class="navbar navbar-light bg-ligth">  
+  <span> <%= link_to t('app.testguru'), root_path, class: 'navbar-brand' %> </span>
   <span class='nav-admin title'><%= t('app.panel') %></span>
 
-  <div class='nav-admin user'
+  <span class="navbar-text">
     <b class='nav-admin user-email'><%= current_user.email %></b>
-    <%= link_to t('app.logout'), :destroy_user_session, method: :delete %>
-  </div>
-</div>
+    (<%= link_to t('app.logout'), :destroy_user_session, method: :delete %>)
+  </span>
+</nav>
