--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>TestGuru</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,14 +13,17 @@
   </head>
 
   <body>
-    <%= render 'shared/nav' %>
+    <div class="container">
+      <%= render 'shared/nav' %>
 
-    <%= render 'shared/flash' %>
+      <%= link_to t('app.tests'), tests_path %>
+      <%= link_to t('app.test_passages'), test_passages_path %>
+      
+      <%= render 'shared/flash' %>
 
-    <%= render 'shared/welcome' %>
+      <%= yield %>
 
-    <%= yield %>
-
-    <%= render 'shared/footer' %>
+      <%= render 'shared/footer' %>
+    </div>
   </body>
 </html>
