--- a/app/views/shared/_welcome.html.erb
+++ b/app/views/shared/_welcome.html.erb
@@ -1,6 +1,7 @@
 <% if user_signed_in? %>
-  <div class="nav user">
-    <%= t('app.welcome', name: current_user.first_name) %> 
-    (<%= link_to t('app.logout'), :destroy_user_session, method: :delete %>)
-  </div>
+  <%= t('app.welcome', name: current_user.first_name) %>
+  (<%= link_to t('app.logout'), :destroy_user_session, method: :delete %>)
+<% else %>
+  <%= link_to t('app.login'), new_session_path(resource_name) %> | 
+  <%= link_to t('app.signup'), new_registration_path(resource_name) %>
 <% end %>
