--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,12 +1,12 @@
 <h1><%= t('tests.index.header') %>:</h1>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="table-primary">
     <tr>
-      <th><%= t('app.title') %></th>
-      <th><%= t('app.level') %></th>
-      <th><%= t('app.questions') %></th>
-      <th><%= t('app.actions') %>:</th>
+      <th scope="col"><%= t('app.title') %></th>
+      <th scope="col"><%= t('app.level') %></th>
+      <th scope="col"><%= t('app.questions') %></th>
+      <th scope="col"><%= t('app.actions') %>:</th>
     </tr>
   </thead>
   <tbody>
