--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,3 @@
-<% flash.each do |key, message| %>
-  <%= tag.p message, class: "flash #{key}" %>
+<% flash.each do |msg_type, message| %>
+  <%= flash_msg(msg_type, message) %>  
 <% end %>
