--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-light bg-ligth">
   <%= link_to t('app.testguru'), root_path, class: 'navbar-brand' %>
+  <% if current_user&.is_a?(Admin) %>
+    <%= link_to t('app.panel'), admin_tests_path %>
+  <% end %>
 
   <span class="navbar-text">
     <%= render 'shared/welcome' %>
