--- a/app/views/shared/errors/_errors_list.html.erb
+++ b/app/views/shared/errors/_errors_list.html.erb
@@ -1,8 +1,15 @@
-<% if resource.errors.present? %>
-  <ul class='error'>
-    <%= tag.strong 'Errors detected' %>
-    <% resource.errors.full_messages.each do |message| %>
-      <li><%= "#{message}" %></li>
-    <% end %>
-  </ul>
+<% if resource.errors.any? %>
+  <div class='error' id="error_explanation">    
+    <h2>
+      <%= I18n.t("errors.messages.not_saved",
+                 count: resource.errors.count,
+                 resource: resource.class.model_name.human.downcase)
+       %>
+    </h2>
+    <ul>
+      <% resource.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
