Fix code review remarks

--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -5,8 +5,8 @@
 </p>
 
 <table class="table">
-  <thead class="table-primary">
-    <tr>
+  <thead>
+    <tr class="table-primary">
       <th scope="col"><%= t('app.title') %></th>
       <th scope="col"><%= t('app.level') %></th>
       <th scope="col"><%= t('app.questions') %></th>
