--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,8 +1,8 @@
 <h1><%= t('tests.index.header') %>:</h1>
 
 <table class="table">
-  <thead class="table-primary">
-    <tr>
+  <thead>
+    <tr  class="table-primary">
       <th scope="col"><%= t('app.title') %></th>
       <th scope="col"><%= t('app.level') %></th>
       <th scope="col"><%= t('app.questions') %></th>
