--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,7 +18,8 @@
 
       <%= link_to t('app.tests'), tests_path %>
       <%= link_to t('app.test_passages'), test_passages_path %>
-      
+      <%= link_to t('app.gists'), admin_gists_path %>
+
       <%= render 'shared/flash' %>
 
       <%= yield %>
