--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,5 @@
 <% flash.each do |msg_type, message| %>
-  <%= flash_msg(msg_type, message) %>  
+  <p class="alert alert-<%= msg_type %>">
+    <%= sanitize(message) %>
+  </p>  
 <% end %>
