--- a/app/views/admin/gists/index.html.erb
+++ b/app/views/admin/gists/index.html.erb
@@ -5,6 +5,7 @@
     <tr class="table-primary">
       <th scope="col"><%= t('.question') %></th>
       <th scope="col"><%= t('.url') %></th>
+      <th scope="col"><%= t('.actions') %></th>
       <th scope="col"><%= t('.guru') %></th>
     </tr>
   </thead>
