--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,9 +16,8 @@
     <div class="container">
       <%= render 'admin/nav' %>
 
-      <%= link_to t('app.tests'), tests_path %>
-      <%= link_to t('app.test_passages'), test_passages_path %>
-      <%= link_to t('app.gists'), admin_gists_path %>
+      <%= render 'admin/nav_menu' %>
+
 
       <%= render 'shared/flash' %>
 
