--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,8 @@
     <div class="container">
       <%= render 'shared/nav' %>
 
-      <%= link_to t('app.tests'), tests_path %>
-      <%= link_to t('app.test_passages'), test_passages_path %>
-      
+      <%= render 'shared/nav_menu' %>
+
       <%= render 'shared/flash' %>
 
       <%= yield %>
