--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer>
-  <br>
+<br>
+<footer class="bg-light text-center text-lg-start">
   <%= current_year %>, Vladimir<br>
   <%= github_url(text: t('app.project'), author: 'vtpros', repo: 'TestGuru') %>
   <%= t('app.school_html') %>
