--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,7 @@
             <p>
               <%= f.label :password %>
               <% if @minimum_password_length %>
-              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <em>(<%= t('app.devise.chars_min', chars: @minimum_password_length) %>)</em>
               <% end %><br />
               <%= f.password_field :password, autocomplete: "new-password", class: 'form-control password1' %>
             </p>
