--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -5,8 +5,8 @@
     <tr  class="table-primary">
       <th scope="col" class="sort-by-title pointer">
         <%= t('app.title') %>
-        <%= octicon 'arrow-up', class: 'text-success hide' %>
-        <%= octicon 'arrow-down', class: 'text-success hide' %>
+        <%= octicon 'arrow-up', class: 'text-success' %>
+        <%= octicon 'arrow-down', class: 'text-success' %>
       </th>
       <th scope="col"><%= t('app.level') %></th>
       <th scope="col"><%= t('app.questions') %></th>
