--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -4,6 +4,8 @@
   <%= link_to t('.new_test'), new_admin_test_path %>
 </p>
 
+<%= render 'shared/errors/errors_list', resource: @test %>
+
 <table class="table">
   <thead>
     <tr class="table-primary">
