--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -6,7 +6,7 @@
 
 <%= render 'shared/errors/errors_list', resource: @test %>
 
-<table class="table">
+<table class="table tests-index">
   <thead>
     <tr class="table-primary">
       <th scope="col" class="sort-by-title pointer">
