--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col col-md-4">
     <h2><%= t('app.become_guru') %></h2>
 
-    <div class="card border-primary">
+    <div class="card border-primary registration">
       <div class="card-body">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <div class="form-group">
