--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale %>">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +16,7 @@
     <%= javascript_include_tag "translations", skip_pipeline: true %>
   </head>
 
-  <body data-locale="<%= I18n.locale %>">
+  <body>
     <div class="container">
       <%= render 'admin/nav' %>
 
