Temporary comment out I18n.js from the templates

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,8 +12,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <!-- I18n.js localization -->
-    <%= javascript_include_tag "i18n" %>
-    <%= javascript_include_tag "translations", skip_pipeline: true %>
+    <!--%= javascript_include_tag "i18n" %-->
+    <!--%= javascript_include_tag "translations", skip_pipeline: true %-->
   </head>
 
   <body>
