Add feedback page and email delivery

--- a/app/views/shared/_nav_menu.html.erb
+++ b/app/views/shared/_nav_menu.html.erb
@@ -6,6 +6,7 @@
     <div class="navbar-nav">
         <%= link_to t('app.tests'), tests_path, class: 'nav-item nav-link' %>
         <%= link_to t('app.test_passages'), test_passages_path, class: 'nav-item nav-link' %>
+        <%= link_to t('app.feedback'), feedback_path, class: 'nav-item nav-link' %>
     </div>
   </div>
 </nav>
