--- a/app/views/admin/_nav_menu.html.erb
+++ b/app/views/admin/_nav_menu.html.erb
@@ -7,6 +7,7 @@
       <%= link_to t('app.tests'), tests_path, class: 'nav-item nav-link' %>
       <%= link_to t('app.test_passages'), test_passages_path, class: 'nav-item nav-link' %>
       <%= link_to t('app.gists'), admin_gists_path, class: 'nav-item nav-link' %>
+      <%= link_to t('app.feedback'), feedback_path, class: 'nav-item nav-link' %>
     </div>
   </div>
 </nav>
